proyecto2/pypar.output
No terminales inútiles en gramática

   testlist_safe_aux


Terminales no usados en gramática

   ESPTAB
   OPERADOR
   CLASS
   FINALLY
   NONE
   LAMBDA
   TRY
   FROM
   NONLOCAL
   YIELD
   ASSERT
   IMPORT
   EXCEPT
   AT
   MENOSMAYOR
   CSIMPLE
   IDIAG
   GATO
   DIDIAG
   SALIDA
   FIN


Reglas inútiles en gramática

  271 testlist_safe_aux: COMA old_test testlist_safe_aux
  272                  | COMA old_test


Estado 99 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 136 conflictos: 2 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: GOAL $end

    1 GOAL: file_input

    2 file_input: file_input NEWLINE
    3           | stmt file_input
    4           | %empty

    5 funcdef: DEF IDENTIFICADOR parameters DPUNTO suite

    6 parameters: APAREN parameters_aux CPAREN

    7 parameters_aux: varargslist
    8               | %empty

    9 varargslist: varargslist_a
   10            | varargslist_b

   11 varargslist_a: varargslist_a_aux_a varargslist_a_aux_b

   12 varargslist_a_aux_a: varargslist_a_aux_a fpdef val_aux_a COMA
   13                    | %empty

   14 val_aux_a: IGUAL test
   15          | %empty

   16 varargslist_a_aux_b: ASTERISCO IDENTIFICADOR val_aux_b
   17                    | DASTERISCO IDENTIFICADOR

   18 val_aux_b: COMA DASTERISCO IDENTIFICADOR
   19          | %empty

   20 varargslist_b: fpdef val_aux_a varargslist_b_aux val_b

   21 val_b: COMA
   22      | %empty

   23 varargslist_b_aux: varargslist_b_aux COMA fpdef val_aux_a
   24                  | %empty

   25 fpdef: IDENTIFICADOR
   26      | APAREN fplist CPAREN

   27 fplist: fpdef fplist_aux fpl_aux

   28 fpl_aux: COMA
   29        | %empty

   30 fplist_aux: fplist_aux COMA fpdef
   31           | %empty

   32 stmt: simple_stmt
   33     | compound_stmt

   34 simple_stmt: small_stmt simple_stmt_aux ss_aux NEWLINE

   35 ss_aux: PCOMA
   36       | %empty

   37 simple_stmt_aux: simple_stmt_aux PCOMA small_stmt
   38                | %empty

   39 small_stmt: expr_stmt
   40           | print_stmt
   41           | del_stmt
   42           | pass_stmt
   43           | flow_stmt
   44           | global_stmt
   45           | exec_stmt

   46 expr_stmt: testlist expr_stmt_aux_b

   47 expr_stmt_aux_b: augassign testlist
   48                | expr_stmt_aux_b_a

   49 expr_stmt_aux_b_a: IGUAL testlist
   50                  | %empty

   51 augassign: MASIGUAL
   52          | MENOSIGUAL
   53          | ASTIGUAL
   54          | DIAIGUAL
   55          | PORIGUAL
   56          | AMPIGUAL
   57          | PIPEIGUAL
   58          | CIRCIGUAL
   59          | DMENORIGUAL
   60          | DMAYORIGUAL
   61          | DASTIGUAL
   62          | DDIAIGUAL

   63 print_stmt: PRINT s29

   64 s29: s30
   65    | DMAYOR test s31

   66 s30: test s32 comaS
   67    | %empty

   68 s31: COMA test comaS
   69    | %empty

   70 s32: s32 COMA test
   71    | %empty

   72 comaS: COMA
   73      | %empty

   74 del_stmt: DEL exprlist

   75 pass_stmt: PASS

   76 flow_stmt: break_stmt
   77          | continue_stmt
   78          | return_stmt
   79          | raise_stmt

   80 break_stmt: BREAK

   81 continue_stmt: CONTINUE

   82 return_stmt: RETURN return_stmt_aux

   83 return_stmt_aux: testlist
   84                | %empty

   85 raise_stmt: RAISE s3

   86 s3: test s4
   87   | %empty

   88 s4: COMA test s5
   89   | %empty

   90 s5: COMA test
   91   | %empty

   92 global_stmt: GLOBAL IDENTIFICADOR global_stmt_aux

   93 global_stmt_aux: global_stmt_aux COMA IDENTIFICADOR
   94                | %empty

   95 exec_stmt: EXEC expr s7

   96 s7: IN test s5
   97   | %empty

   98 compound_stmt: if_stmt
   99              | while_stmt
  100              | for_stmt
  101              | with_stmt
  102              | funcdef

  103 if_stmt: IF test DPUNTO suite if_stmt_aux s8

  104 if_stmt_aux: if_stmt_aux ELIF test DPUNTO suite
  105            | %empty

  106 s8: ELSE DPUNTO suite
  107   | %empty

  108 while_stmt: WHILE test DPUNTO suite s8

  109 for_stmt: FOR exprlist IN testlist DPUNTO suite s8

  110 with_stmt: WITH with_item with_stmt_aux DPUNTO suite

  111 with_stmt_aux: with_stmt_aux COMA with_item
  112              | %empty

  113 with_item: test s10

  114 s10: AS expr
  115    | %empty

  116 suite: simple_stmt
  117      | NEWLINE INDENT suite_aux DEDENT

  118 suite_aux: suite_aux stmt
  119          | stmt

  120 testlist_safe: old_test s13 comaS

  121 old_test: or_test

  122 s13: s13 COMA old_test
  123    | COMA old_test

  124 s15: IF or_test ELSE test
  125    | %empty

  126 test: or_test s15

  127 or_test: and_test or_test_aux

  128 or_test_aux: or_test_aux OR and_test
  129            | %empty

  130 and_test: not_test and_test_aux

  131 and_test_aux: and_test_aux AND not_test
  132             | %empty

  133 not_test: NOT not_test
  134         | comparison

  135 comparison: expr comparison_aux

  136 comparison_aux: comparison_aux comp_op expr
  137               | %empty

  138 comp_op: MENOR
  139        | MAYOR
  140        | DIGUAL
  141        | MAIGUAL
  142        | MEIGUAL
  143        | MENORMAYOR
  144        | NIGUAL
  145        | IN
  146        | NOT IN
  147        | IS
  148        | IS NOT

  149 expr: xor_expr expr_aux

  150 expr_aux: expr_aux PIPE xor_expr
  151         | %empty

  152 xor_expr: and_expr xor_expr_aux

  153 xor_expr_aux: xor_expr_aux CIRCUNFLEJO and_expr
  154             | %empty

  155 and_expr: shift_expr and_expr_aux

  156 and_expr_aux: and_expr_aux AMPERSON shift_expr
  157             | %empty

  158 shift_expr: arith_expr shift_expr_aux

  159 shift_expr_aux: shift_expr_aux DMENOR arith_expr
  160               | shift_expr_aux DMAYOR arith_expr
  161               | %empty

  162 arith_expr: term arith_expr_aux

  163 arith_expr_aux: arith_expr_aux ae_aux term
  164               | %empty

  165 ae_aux: MAS
  166       | MENOS

  167 term: factor term_aux

  168 term_aux: term_aux t_aux factor
  169         | %empty

  170 t_aux: ASTERISCO
  171      | DIAG
  172      | PORCEN
  173      | DDIAG

  174 factor: factor_aux factor
  175       | power

  176 factor_aux: MAS
  177           | MENOS
  178           | ENETILDE

  179 power: atom power_aux s16

  180 s16: DASTERISCO factor
  181    | %empty

  182 s17: testlist_comp
  183    | %empty

  184 s18: listmaker
  185    | %empty

  186 s19: dictorsetmaker
  187    | %empty

  188 s20: arglist
  189    | %empty

  190 s21: test
  191    | %empty

  192 s22: sliceop
  193    | %empty

  194 power_aux: power_aux trailer
  195          | %empty

  196 atom: APAREN s17 CPAREN
  197     | ACORCHETE s18 CCORCHETE
  198     | ALLAVE s19 CLLAVE
  199     | IDENTIFICADOR
  200     | FLOTANTE
  201     | ENTERO
  202     | string_aux
  203     | TRUE
  204     | FALSE

  205 string_aux: string_aux STRING
  206           | STRING

  207 listmaker: test listmaker_aux

  208 listmaker_aux: list_for
  209              | lm_aux comaS

  210 lm_aux: lm_aux COMA test
  211       | %empty

  212 testlist_comp: test testlist_comp_aux

  213 testlist_comp_aux: comp_for
  214                  | tc_aux comaS

  215 tc_aux: tc_aux COMA test
  216       | %empty

  217 trailer: APAREN s20 CPAREN
  218        | ACORCHETE subscriptlist CCORCHETE
  219        | PUNTO IDENTIFICADOR

  220 subscriptlist: subscript subscriptlist_aux comaS

  221 subscriptlist_aux: subscriptlist_aux COMA subscript
  222                  | %empty

  223 subscript: PUNTO PUNTO PUNTO
  224          | test
  225          | s21 DPUNTO s21 s22

  226 sliceop: DPUNTO s21

  227 exprlist: expr exprlist_aux comaS

  228 exprlist_aux: exprlist_aux COMA expr
  229             | %empty

  230 testlist: test testlist_aux comaS

  231 testlist_aux: testlist_aux COMA test
  232             | %empty

  233 dictorsetmaker: dictorsetmaker_aux_a
  234               | dictorsetmaker_aux_b

  235 dictorsetmaker_aux_a: test DPUNTO test dsm_aux_a

  236 dsm_aux_a: comp_for
  237          | dsm_aux_a_a comaS

  238 dsm_aux_a_a: dsm_aux_a_a COMA test DPUNTO test
  239            | %empty

  240 dictorsetmaker_aux_b: test dsm_aux_b

  241 dsm_aux_b: comp_for
  242          | dsm_aux_b_a comaS

  243 dsm_aux_b_a: dsm_aux_b_a COMA test
  244            | %empty

  245 arglist: arglist_aux_a arglist_aux_b

  246 arglist_aux_a: arglist_aux_a argument COMA
  247              | %empty

  248 arglist_aux_b: argument comaS
  249              | ASTERISCO test al_aux s25
  250              | DASTERISCO test

  251 al_aux: al_aux COMA argument
  252       | %empty

  253 s25: COMA DASTERISCO test
  254    | %empty

  255 argument: test s26
  256         | test IGUAL test

  257 s26: comp_for
  258    | %empty

  259 list_iter: list_for
  260          | list_if

  261 list_for: FOR exprlist IN testlist_safe s27

  262 list_if: IF old_test s27

  263 s27: list_iter
  264    | %empty

  265 comp_iter: comp_for
  266          | comp_if

  267 comp_for: FOR exprlist IN or_test s28

  268 comp_if: IF old_test s28

  269 s28: comp_iter
  270    | %empty


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
STRING (258) 205 206
ESPTAB (259)
OPERADOR (260)
IDENTIFICADOR (261) 5 16 17 18 25 92 93 199 219
PRINT (262) 63
FALSE (263) 204
CLASS (264)
FINALLY (265)
IS (266) 147 148
RETURN (267) 82
NONE (268)
CONTINUE (269) 81
FOR (270) 109 261 267
LAMBDA (271)
TRY (272)
TRUE (273) 203
DEF (274) 5
FROM (275)
NONLOCAL (276)
WHILE (277) 108
AND (278) 131
DEL (279) 74
GLOBAL (280) 92
NOT (281) 133 146 148
WITH (282) 110
AS (283) 114
ELIF (284) 104
IF (285) 103 124 262 268
OR (286) 128
YIELD (287)
ASSERT (288)
ELSE (289) 106 124
IMPORT (290)
PASS (291) 75
BREAK (292) 80
EXCEPT (293)
IN (294) 96 109 145 146 261 267
RAISE (295) 85
EXEC (296) 95
NIGUAL (297) 144
DIGUAL (298) 140
MAIGUAL (299) 141
MEIGUAL (300) 142
MAYOR (301) 139
MENOR (302) 138
ENETILDE (303) 178
CIRCUNFLEJO (304) 153
PIPE (305) 150
AMPERSON (306) 156
DMAYOR (307) 65 160
DMENOR (308) 159
PORCEN (309) 172
DDIAG (310) 173
DIAG (311) 171
DASTERISCO (312) 17 18 180 250 253
ASTERISCO (313) 16 170 249
MENOS (314) 166 177
MAS (315) 165 176
APAREN (316) 6 26 196 217
CPAREN (317) 6 26 196 217
ACORCHETE (318) 197 218
CCORCHETE (319) 197 218
ALLAVE (320) 198
CLLAVE (321) 198
COMA (322) 12 18 21 23 28 30 68 70 72 88 90 93 111 122 123 210 215
    221 228 231 238 243 246 251 253
DPUNTO (323) 5 103 104 106 108 109 110 225 226 235 238
PUNTO (324) 219 223
PCOMA (325) 35 37
AT (326)
IGUAL (327) 14 49 256
MENOSMAYOR (328)
MASIGUAL (329) 51
MENOSIGUAL (330) 52
ASTIGUAL (331) 53
DIAIGUAL (332) 54
DDIAIGUAL (333) 62
PORIGUAL (334) 55
AMPIGUAL (335) 56
PIPEIGUAL (336) 57
CIRCIGUAL (337) 58
DMAYORIGUAL (338) 60
DMENORIGUAL (339) 59
DASTIGUAL (340) 61
MENORMAYOR (341) 143
CSIMPLE (342)
IDIAG (343)
GATO (344)
DIDIAG (345)
NEWLINE (346) 2 34 117
ENTERO (347) 201
FLOTANTE (348) 200
INDENT (349) 117
SALIDA (350)
DEDENT (351) 117
FIN (352)


No terminales con las reglas donde aparecen

$accept (98)
    en la izquierda: 0
GOAL (99)
    en la izquierda: 1, en la derecha: 0
file_input (100)
    en la izquierda: 2 3 4, en la derecha: 1 2 3
funcdef (101)
    en la izquierda: 5, en la derecha: 102
parameters (102)
    en la izquierda: 6, en la derecha: 5
parameters_aux (103)
    en la izquierda: 7 8, en la derecha: 6
varargslist (104)
    en la izquierda: 9 10, en la derecha: 7
varargslist_a (105)
    en la izquierda: 11, en la derecha: 9
varargslist_a_aux_a (106)
    en la izquierda: 12 13, en la derecha: 11 12
val_aux_a (107)
    en la izquierda: 14 15, en la derecha: 12 20 23
varargslist_a_aux_b (108)
    en la izquierda: 16 17, en la derecha: 11
val_aux_b (109)
    en la izquierda: 18 19, en la derecha: 16
varargslist_b (110)
    en la izquierda: 20, en la derecha: 10
val_b (111)
    en la izquierda: 21 22, en la derecha: 20
varargslist_b_aux (112)
    en la izquierda: 23 24, en la derecha: 20 23
fpdef (113)
    en la izquierda: 25 26, en la derecha: 12 20 23 27 30
fplist (114)
    en la izquierda: 27, en la derecha: 26
fpl_aux (115)
    en la izquierda: 28 29, en la derecha: 27
fplist_aux (116)
    en la izquierda: 30 31, en la derecha: 27 30
stmt (117)
    en la izquierda: 32 33, en la derecha: 3 118 119
simple_stmt (118)
    en la izquierda: 34, en la derecha: 32 116
ss_aux (119)
    en la izquierda: 35 36, en la derecha: 34
simple_stmt_aux (120)
    en la izquierda: 37 38, en la derecha: 34 37
small_stmt (121)
    en la izquierda: 39 40 41 42 43 44 45, en la derecha: 34 37
expr_stmt (122)
    en la izquierda: 46, en la derecha: 39
expr_stmt_aux_b (123)
    en la izquierda: 47 48, en la derecha: 46
expr_stmt_aux_b_a (124)
    en la izquierda: 49 50, en la derecha: 48
augassign (125)
    en la izquierda: 51 52 53 54 55 56 57 58 59 60 61 62, en la derecha:
    47
print_stmt (126)
    en la izquierda: 63, en la derecha: 40
s29 (127)
    en la izquierda: 64 65, en la derecha: 63
s30 (128)
    en la izquierda: 66 67, en la derecha: 64
s31 (129)
    en la izquierda: 68 69, en la derecha: 65
s32 (130)
    en la izquierda: 70 71, en la derecha: 66 70
comaS (131)
    en la izquierda: 72 73, en la derecha: 66 68 120 209 214 220 227
    230 237 242 248
del_stmt (132)
    en la izquierda: 74, en la derecha: 41
pass_stmt (133)
    en la izquierda: 75, en la derecha: 42
flow_stmt (134)
    en la izquierda: 76 77 78 79, en la derecha: 43
break_stmt (135)
    en la izquierda: 80, en la derecha: 76
continue_stmt (136)
    en la izquierda: 81, en la derecha: 77
return_stmt (137)
    en la izquierda: 82, en la derecha: 78
return_stmt_aux (138)
    en la izquierda: 83 84, en la derecha: 82
raise_stmt (139)
    en la izquierda: 85, en la derecha: 79
s3 (140)
    en la izquierda: 86 87, en la derecha: 85
s4 (141)
    en la izquierda: 88 89, en la derecha: 86
s5 (142)
    en la izquierda: 90 91, en la derecha: 88 96
global_stmt (143)
    en la izquierda: 92, en la derecha: 44
global_stmt_aux (144)
    en la izquierda: 93 94, en la derecha: 92 93
exec_stmt (145)
    en la izquierda: 95, en la derecha: 45
s7 (146)
    en la izquierda: 96 97, en la derecha: 95
compound_stmt (147)
    en la izquierda: 98 99 100 101 102, en la derecha: 33
if_stmt (148)
    en la izquierda: 103, en la derecha: 98
if_stmt_aux (149)
    en la izquierda: 104 105, en la derecha: 103 104
s8 (150)
    en la izquierda: 106 107, en la derecha: 103 108 109
while_stmt (151)
    en la izquierda: 108, en la derecha: 99
for_stmt (152)
    en la izquierda: 109, en la derecha: 100
with_stmt (153)
    en la izquierda: 110, en la derecha: 101
with_stmt_aux (154)
    en la izquierda: 111 112, en la derecha: 110 111
with_item (155)
    en la izquierda: 113, en la derecha: 110 111
s10 (156)
    en la izquierda: 114 115, en la derecha: 113
suite (157)
    en la izquierda: 116 117, en la derecha: 5 103 104 106 108 109
    110
suite_aux (158)
    en la izquierda: 118 119, en la derecha: 117 118
testlist_safe (159)
    en la izquierda: 120, en la derecha: 261
old_test (160)
    en la izquierda: 121, en la derecha: 120 122 123 262 268
s13 (161)
    en la izquierda: 122 123, en la derecha: 120 122
s15 (162)
    en la izquierda: 124 125, en la derecha: 126
test (163)
    en la izquierda: 126, en la derecha: 14 65 66 68 70 86 88 90 96
    103 104 108 113 124 190 207 210 212 215 224 230 231 235 238 240
    243 249 250 253 255 256
or_test (164)
    en la izquierda: 127, en la derecha: 121 124 126 267
or_test_aux (165)
    en la izquierda: 128 129, en la derecha: 127 128
and_test (166)
    en la izquierda: 130, en la derecha: 127 128
and_test_aux (167)
    en la izquierda: 131 132, en la derecha: 130 131
not_test (168)
    en la izquierda: 133 134, en la derecha: 130 131 133
comparison (169)
    en la izquierda: 135, en la derecha: 134
comparison_aux (170)
    en la izquierda: 136 137, en la derecha: 135 136
comp_op (171)
    en la izquierda: 138 139 140 141 142 143 144 145 146 147 148, en la derecha:
    136
expr (172)
    en la izquierda: 149, en la derecha: 95 114 135 136 227 228
expr_aux (173)
    en la izquierda: 150 151, en la derecha: 149 150
xor_expr (174)
    en la izquierda: 152, en la derecha: 149 150
xor_expr_aux (175)
    en la izquierda: 153 154, en la derecha: 152 153
and_expr (176)
    en la izquierda: 155, en la derecha: 152 153
and_expr_aux (177)
    en la izquierda: 156 157, en la derecha: 155 156
shift_expr (178)
    en la izquierda: 158, en la derecha: 155 156
shift_expr_aux (179)
    en la izquierda: 159 160 161, en la derecha: 158 159 160
arith_expr (180)
    en la izquierda: 162, en la derecha: 158 159 160
arith_expr_aux (181)
    en la izquierda: 163 164, en la derecha: 162 163
ae_aux (182)
    en la izquierda: 165 166, en la derecha: 163
term (183)
    en la izquierda: 167, en la derecha: 162 163
term_aux (184)
    en la izquierda: 168 169, en la derecha: 167 168
t_aux (185)
    en la izquierda: 170 171 172 173, en la derecha: 168
factor (186)
    en la izquierda: 174 175, en la derecha: 167 168 174 180
factor_aux (187)
    en la izquierda: 176 177 178, en la derecha: 174
power (188)
    en la izquierda: 179, en la derecha: 175
s16 (189)
    en la izquierda: 180 181, en la derecha: 179
s17 (190)
    en la izquierda: 182 183, en la derecha: 196
s18 (191)
    en la izquierda: 184 185, en la derecha: 197
s19 (192)
    en la izquierda: 186 187, en la derecha: 198
s20 (193)
    en la izquierda: 188 189, en la derecha: 217
s21 (194)
    en la izquierda: 190 191, en la derecha: 225 226
s22 (195)
    en la izquierda: 192 193, en la derecha: 225
power_aux (196)
    en la izquierda: 194 195, en la derecha: 179 194
atom (197)
    en la izquierda: 196 197 198 199 200 201 202 203 204, en la derecha:
    179
string_aux (198)
    en la izquierda: 205 206, en la derecha: 202 205
listmaker (199)
    en la izquierda: 207, en la derecha: 184
listmaker_aux (200)
    en la izquierda: 208 209, en la derecha: 207
lm_aux (201)
    en la izquierda: 210 211, en la derecha: 209 210
testlist_comp (202)
    en la izquierda: 212, en la derecha: 182
testlist_comp_aux (203)
    en la izquierda: 213 214, en la derecha: 212
tc_aux (204)
    en la izquierda: 215 216, en la derecha: 214 215
trailer (205)
    en la izquierda: 217 218 219, en la derecha: 194
subscriptlist (206)
    en la izquierda: 220, en la derecha: 218
subscriptlist_aux (207)
    en la izquierda: 221 222, en la derecha: 220 221
subscript (208)
    en la izquierda: 223 224 225, en la derecha: 220 221
sliceop (209)
    en la izquierda: 226, en la derecha: 192
exprlist (210)
    en la izquierda: 227, en la derecha: 74 109 261 267
exprlist_aux (211)
    en la izquierda: 228 229, en la derecha: 227 228
testlist (212)
    en la izquierda: 230, en la derecha: 46 47 49 83 109
testlist_aux (213)
    en la izquierda: 231 232, en la derecha: 230 231
dictorsetmaker (214)
    en la izquierda: 233 234, en la derecha: 186
dictorsetmaker_aux_a (215)
    en la izquierda: 235, en la derecha: 233
dsm_aux_a (216)
    en la izquierda: 236 237, en la derecha: 235
dsm_aux_a_a (217)
    en la izquierda: 238 239, en la derecha: 237 238
dictorsetmaker_aux_b (218)
    en la izquierda: 240, en la derecha: 234
dsm_aux_b (219)
    en la izquierda: 241 242, en la derecha: 240
dsm_aux_b_a (220)
    en la izquierda: 243 244, en la derecha: 242 243
arglist (221)
    en la izquierda: 245, en la derecha: 188
arglist_aux_a (222)
    en la izquierda: 246 247, en la derecha: 245 246
arglist_aux_b (223)
    en la izquierda: 248 249 250, en la derecha: 245
al_aux (224)
    en la izquierda: 251 252, en la derecha: 249 251
s25 (225)
    en la izquierda: 253 254, en la derecha: 249
argument (226)
    en la izquierda: 255 256, en la derecha: 246 248 251
s26 (227)
    en la izquierda: 257 258, en la derecha: 255
list_iter (228)
    en la izquierda: 259 260, en la derecha: 263
list_for (229)
    en la izquierda: 261, en la derecha: 208 259
list_if (230)
    en la izquierda: 262, en la derecha: 260
s27 (231)
    en la izquierda: 263 264, en la derecha: 261 262
comp_iter (232)
    en la izquierda: 265 266, en la derecha: 269
comp_for (233)
    en la izquierda: 267, en la derecha: 213 236 241 257 265
comp_if (234)
    en la izquierda: 268, en la derecha: 266
s28 (235)
    en la izquierda: 269 270, en la derecha: 267 268


State 0

    0 $accept: . GOAL $end

    STRING         desplazar e ir al estado 1
    IDENTIFICADOR  desplazar e ir al estado 2
    PRINT          desplazar e ir al estado 3
    FALSE          desplazar e ir al estado 4
    RETURN         desplazar e ir al estado 5
    CONTINUE       desplazar e ir al estado 6
    FOR            desplazar e ir al estado 7
    TRUE           desplazar e ir al estado 8
    DEF            desplazar e ir al estado 9
    WHILE          desplazar e ir al estado 10
    DEL            desplazar e ir al estado 11
    GLOBAL         desplazar e ir al estado 12
    NOT            desplazar e ir al estado 13
    WITH           desplazar e ir al estado 14
    IF             desplazar e ir al estado 15
    PASS           desplazar e ir al estado 16
    BREAK          desplazar e ir al estado 17
    RAISE          desplazar e ir al estado 18
    EXEC           desplazar e ir al estado 19
    ENETILDE       desplazar e ir al estado 20
    MENOS          desplazar e ir al estado 21
    MAS            desplazar e ir al estado 22
    APAREN         desplazar e ir al estado 23
    ACORCHETE      desplazar e ir al estado 24
    ALLAVE         desplazar e ir al estado 25
    ENTERO         desplazar e ir al estado 26
    FLOTANTE       desplazar e ir al estado 27

    $default  reduce usando la regla 4 (file_input)

    GOAL           ir al estado 28
    file_input     ir al estado 29
    funcdef        ir al estado 30
    stmt           ir al estado 31
    simple_stmt    ir al estado 32
    small_stmt     ir al estado 33
    expr_stmt      ir al estado 34
    print_stmt     ir al estado 35
    del_stmt       ir al estado 36
    pass_stmt      ir al estado 37
    flow_stmt      ir al estado 38
    break_stmt     ir al estado 39
    continue_stmt  ir al estado 40
    return_stmt    ir al estado 41
    raise_stmt     ir al estado 42
    global_stmt    ir al estado 43
    exec_stmt      ir al estado 44
    compound_stmt  ir al estado 45
    if_stmt        ir al estado 46
    while_stmt     ir al estado 47
    for_stmt       ir al estado 48
    with_stmt      ir al estado 49
    test           ir al estado 50
    or_test        ir al estado 51
    and_test       ir al estado 52
    not_test       ir al estado 53
    comparison     ir al estado 54
    expr           ir al estado 55
    xor_expr       ir al estado 56
    and_expr       ir al estado 57
    shift_expr     ir al estado 58
    arith_expr     ir al estado 59
    term           ir al estado 60
    factor         ir al estado 61
    factor_aux     ir al estado 62
    power          ir al estado 63
    atom           ir al estado 64
    string_aux     ir al estado 65
    testlist       ir al estado 66


State 1

  206 string_aux: STRING .

    $default  reduce usando la regla 206 (string_aux)


State 2

  199 atom: IDENTIFICADOR .

    $default  reduce usando la regla 199 (atom)


State 3

   63 print_stmt: PRINT . s29

    STRING         desplazar e ir al estado 1
    IDENTIFICADOR  desplazar e ir al estado 2
    FALSE          desplazar e ir al estado 4
    TRUE           desplazar e ir al estado 8
    NOT            desplazar e ir al estado 13
    ENETILDE       desplazar e ir al estado 20
    DMAYOR         desplazar e ir al estado 67
    MENOS          desplazar e ir al estado 21
    MAS            desplazar e ir al estado 22
    APAREN         desplazar e ir al estado 23
    ACORCHETE      desplazar e ir al estado 24
    ALLAVE         desplazar e ir al estado 25
    ENTERO         desplazar e ir al estado 26
    FLOTANTE       desplazar e ir al estado 27

    $default  reduce usando la regla 67 (s30)

    s29         ir al estado 68
    s30         ir al estado 69
    test        ir al estado 70
    or_test     ir al estado 51
    and_test    ir al estado 52
    not_test    ir al estado 53
    comparison  ir al estado 54
    expr        ir al estado 55
    xor_expr    ir al estado 56
    and_expr    ir al estado 57
    shift_expr  ir al estado 58
    arith_expr  ir al estado 59
    term        ir al estado 60
    factor      ir al estado 61
    factor_aux  ir al estado 62
    power       ir al estado 63
    atom        ir al estado 64
    string_aux  ir al estado 65


State 4

  204 atom: FALSE .

    $default  reduce usando la regla 204 (atom)


State 5

   82 return_stmt: RETURN . return_stmt_aux

    STRING         desplazar e ir al estado 1
    IDENTIFICADOR  desplazar e ir al estado 2
    FALSE          desplazar e ir al estado 4
    TRUE           desplazar e ir al estado 8
    NOT            desplazar e ir al estado 13
    ENETILDE       desplazar e ir al estado 20
    MENOS          desplazar e ir al estado 21
    MAS            desplazar e ir al estado 22
    APAREN         desplazar e ir al estado 23
    ACORCHETE      desplazar e ir al estado 24
    ALLAVE         desplazar e ir al estado 25
    ENTERO         desplazar e ir al estado 26
    FLOTANTE       desplazar e ir al estado 27

    $default  reduce usando la regla 84 (return_stmt_aux)

    return_stmt_aux  ir al estado 71
    test             ir al estado 50
    or_test          ir al estado 51
    and_test         ir al estado 52
    not_test         ir al estado 53
    comparison       ir al estado 54
    expr             ir al estado 55
    xor_expr         ir al estado 56
    and_expr         ir al estado 57
    shift_expr       ir al estado 58
    arith_expr       ir al estado 59
    term             ir al estado 60
    factor           ir al estado 61
    factor_aux       ir al estado 62
    power            ir al estado 63
    atom             ir al estado 64
    string_aux       ir al estado 65
    testlist         ir al estado 72


State 6

   81 continue_stmt: CONTINUE .

    $default  reduce usando la regla 81 (continue_stmt)


State 7

  109 for_stmt: FOR . exprlist IN testlist DPUNTO suite s8

    STRING         desplazar e ir al estado 1
    IDENTIFICADOR  desplazar e ir al estado 2
    FALSE          desplazar e ir al estado 4
    TRUE           desplazar e ir al estado 8
    ENETILDE       desplazar e ir al estado 20
    MENOS          desplazar e ir al estado 21
    MAS            desplazar e ir al estado 22
    APAREN         desplazar e ir al estado 23
    ACORCHETE      desplazar e ir al estado 24
    ALLAVE         desplazar e ir al estado 25
    ENTERO         desplazar e ir al estado 26
    FLOTANTE       desplazar e ir al estado 27

    expr        ir al estado 73
    xor_expr    ir al estado 56
    and_expr    ir al estado 57
    shift_expr  ir al estado 58
    arith_expr  ir al estado 59
    term        ir al estado 60
    factor      ir al estado 61
    factor_aux  ir al estado 62
    power       ir al estado 63
    atom        ir al estado 64
    string_aux  ir al estado 65
    exprlist    ir al estado 74


State 8

  203 atom: TRUE .

    $default  reduce usando la regla 203 (atom)


State 9

    5 funcdef: DEF . IDENTIFICADOR parameters DPUNTO suite

    IDENTIFICADOR  desplazar e ir al estado 75


State 10

  108 while_stmt: WHILE . test DPUNTO suite s8

    STRING         desplazar e ir al estado 1
    IDENTIFICADOR  desplazar e ir al estado 2
    FALSE          desplazar e ir al estado 4
    TRUE           desplazar e ir al estado 8
    NOT            desplazar e ir al estado 13
    ENETILDE       desplazar e ir al estado 20
    MENOS          desplazar e ir al estado 21
    MAS            desplazar e ir al estado 22
    APAREN         desplazar e ir al estado 23
    ACORCHETE      desplazar e ir al estado 24
    ALLAVE         desplazar e ir al estado 25
    ENTERO         desplazar e ir al estado 26
    FLOTANTE       desplazar e ir al estado 27

    test        ir al estado 76
    or_test     ir al estado 51
    and_test    ir al estado 52
    not_test    ir al estado 53
    comparison  ir al estado 54
    expr        ir al estado 55
    xor_expr    ir al estado 56
    and_expr    ir al estado 57
    shift_expr  ir al estado 58
    arith_expr  ir al estado 59
    term        ir al estado 60
    factor      ir al estado 61
    factor_aux  ir al estado 62
    power       ir al estado 63
    atom        ir al estado 64
    string_aux  ir al estado 65


State 11

   74 del_stmt: DEL . exprlist

    STRING         desplazar e ir al estado 1
    IDENTIFICADOR  desplazar e ir al estado 2
    FALSE          desplazar e ir al estado 4
    TRUE           desplazar e ir al estado 8
    ENETILDE       desplazar e ir al estado 20
    MENOS          desplazar e ir al estado 21
    MAS            desplazar e ir al estado 22
    APAREN         desplazar e ir al estado 23
    ACORCHETE      desplazar e ir al estado 24
    ALLAVE         desplazar e ir al estado 25
    ENTERO         desplazar e ir al estado 26
    FLOTANTE       desplazar e ir al estado 27

    expr        ir al estado 73
    xor_expr    ir al estado 56
    and_expr    ir al estado 57
    shift_expr  ir al estado 58
    arith_expr  ir al estado 59
    term        ir al estado 60
    factor      ir al estado 61
    factor_aux  ir al estado 62
    power       ir al estado 63
    atom        ir al estado 64
    string_aux  ir al estado 65
    exprlist    ir al estado 77


State 12

   92 global_stmt: GLOBAL . IDENTIFICADOR global_stmt_aux

    IDENTIFICADOR  desplazar e ir al estado 78


State 13

  133 not_test: NOT . not_test

    STRING         desplazar e ir al estado 1
    IDENTIFICADOR  desplazar e ir al estado 2
    FALSE          desplazar e ir al estado 4
    TRUE           desplazar e ir al estado 8
    NOT            desplazar e ir al estado 13
    ENETILDE       desplazar e ir al estado 20
    MENOS          desplazar e ir al estado 21
    MAS            desplazar e ir al estado 22
    APAREN         desplazar e ir al estado 23
    ACORCHETE      desplazar e ir al estado 24
    ALLAVE         desplazar e ir al estado 25
    ENTERO         desplazar e ir al estado 26
    FLOTANTE       desplazar e ir al estado 27

    not_test    ir al estado 79
    comparison  ir al estado 54
    expr        ir al estado 55
    xor_expr    ir al estado 56
    and_expr    ir al estado 57
    shift_expr  ir al estado 58
    arith_expr  ir al estado 59
    term        ir al estado 60
    factor      ir al estado 61
    factor_aux  ir al estado 62
    power       ir al estado 63
    atom        ir al estado 64
    string_aux  ir al estado 65


State 14

  110 with_stmt: WITH . with_item with_stmt_aux DPUNTO suite
